# phthonus

./: README.md  oha.md
frameworks/Rust/axum/: Cargo.toml  Makefile
frameworks/Rust/axum-xitca/: .env.example  Cargo.toml  Makefile
frameworks/Rust/axum-xitca/src/: error.rs  main.rs  tower_compat.rs
frameworks/Rust/axum-xitca/src/routes/: mod.rs  user.rs
frameworks/Rust/axum-xitca/src/utils/: mod.rs  validator.rs
frameworks/Rust/axum/src/: error.rs  main.rs
frameworks/Rust/axum/src/middlewares/: mod.rs
frameworks/Rust/axum/src/routes/: json.rs  mod.rs  text.rs  user.rs
frameworks/Rust/axum/src/utils/: jwt.rs  mod.rs  validator.rs
ui/: Makefile
ui/.cargo/: config.toml
web/Rust/axum/: Cargo.toml  Makefile
web/Rust/axum/src/: error.rs  main.rs
web/Rust/axum/src/middlewares/: mod.rs
web/Rust/axum/src/routes/: mod.rs
web/Rust/axum/src/utils/: mod.rs
