[package]
name = "phthonus"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
axum = { version = "0.7.6", default-features = false, features = [
    "json",
    "query",
    "form",
] }
xitca-server = { version = "0.4.0", features = ["io-uring"] }
xitca-http = { version = "0.6.0", features = ["io-uring"] }
xitca-io = { version = "0.4.1", features = ["runtime-uring"] }
xitca-service = "0.2.0"
xitca-web = { version = "0.6.2", features = ["tower-http-compat"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
# error
anyhow = "1.0.89"
thiserror = "1.0.64"
# tools
dotenvy = "0.15.7"
serde = { version = "1.0.210", features = ["derive", "serde_derive"] }
serde_json = { version = "1.0.128" }
serde_repr = "0.1.19"
http-body = "1.0.1"
xitca-unsafe-collection = "0.2.0"
jsonwebtoken = "9.3.0"
validator = { version = "0.18.1", features = ["derive"] }
