[package]
name = "phthonus-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
# server
axum = "0.7.5"
tokio = { version = "1.40.0", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.5.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
# error
anyhow = "1.0.88"
thiserror = "1.0.63"
# tools
dotenvy = "0.15.7"
serde = { version = "1.0.210", features = ["derive", "serde_derive"] }
serde_json = { version = "1.0.128" }
serde_repr = "0.1.19"

[profile.release]
lto = true
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
# opt-level = "s"   # Optimize for binary size
strip = true # Remove debug symbols
